--- a/FileExplorerIPFS.xcodeproj/xcshareddata/xcschemes/FileExplorerIPFS.xcscheme
+++ b/FileExplorerIPFS.xcodeproj/xcshareddata/xcschemes/FileExplorerIPFS.xcscheme
@@ -37,6 +37,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "32B2F0752A6A5DF90060F1EA"
+               BuildableName = "FileExplorerIPFSTests.xctest"
+               BlueprintName = "FileExplorerIPFSTests"
+               ReferencedContainer = "container:FileExplorerIPFS.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
